
syntax = "proto3";

package protos;

// Donor model 
message Donor {
    string addr = 1;
    string id = 2;
    string name = 3;
    uint64 total = 4;
    repeated DonorContribution contributions = 5;
    repeated DonorTrack trackings = 6;
}

// Donor Contribution model 
message DonorContribution {
    string name = 1;
    string treatyname = 2;
    string treatyaddr = 3;
    uint64 amount = 4;
    int64 timestamp = 5;
}

// DonorTrack model 
message DonorTrack {
    string name = 1;
    string contractname = 2;
    string contractaddr = 3;    
    uint64 amount = 4;
    int64 timestamp = 5;
}
