
syntax = "proto3";

package protos;

// SmartContract model 
message SmartContract {
    string addr = 1;
    string id = 2;
    string name = 3;
    string detail = 4;
    uint64 goal = 5;
    string partyA = 6;
    string partyB = 7;
    uint64 type = 8;   //0为金额限制，1位时间限制
    uint64 fundManangerFee = 9;
    uint64 channelFee = 10;
    int64 createTimestamp = 11;
    int64 utilTimestamp = 12;
    int64 terminationTimestamp = 13;
    string foundation = 14;
    string attachhash = 15;
    repeated TContract tContract = 16;
    uint64 status = 17;  // 合约状态 0为used 1为unused
    string remark = 18;
}

message TContract {
	string name = 1;
    string partyA = 2;
    string partyB = 3;
    int64 signedTimestamp = 4;	
	string hash = 5;
}

message SmartContractTrack {
    string addr = 1;
    string id = 2;
    uint64 total = 3;
    repeated SmartContractHistory trans = 4;
}

message SmartContractHistory {
    string name = 1;
    string type = 2;
    string amount = 3;
    int64 signedTimestamp = 4;  
}
